                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 15-09-2006 fixed: [ 1559620 ] Resume in Movie-Information window doesn't work first time.
 - 15-09-2006 changed: New special:// protocol for the virtual folders (Such as $MUSICPLAYLISTS etc.)
 - 15-09-2006 fixed: Weather wasn't refreshed on language change, so showed a mix of languages.
 - 15-09-2006 fixed: Playlists used picture icons if <playlistsasfolders> was false.
 - 15-09-2006 changed: Kai button enabling yet again (will it ever end??)
 - 15-09-2006 changed: The play action will pause if a media item is currently playing.
 - 15-09-2006 fixed: Play with... popped up instead of Play on the context menu of playlists in My Music.
 - 15-09-2006 fixed: Advancedsettings were also saved to guisettings.xml.
 - 15-09-2006 changed: grabbing of the next song in partymode speed up.
 - 14-09-2006 fixed: seeking in mpeg1 files using dvdplayer caused video to halt. (bug is really in libmpeg2, but work around in place for now)
 - 14-09-2006 changed: Behaviour of Play/Host buttons under various circumstances in Kai.
 - 14-09-2006 fixed: hddsmart request coused a "hang" on request!
 - 14-09-2006 fixed: [ 1551670 ] switch fullscreen hang in system info
 - 13-09-2006 fixed: [ 1275340 ] PCDVDROM always display the directory of first inserted disc
 - 13-09-2006 fixed: on a new smartxx pwmcontrol request, the internal rgb settings needs a reset
 - 13-09-2006 fixed: Wrong button focus if masterlock is cancelled after going to Settings->Masterlock.
 - 13-09-2006 changed: Removed wraparound in Kai lists (listcontrolex)
 - 13-09-2006 fixed: [ 1503867 ] cdg doesn't follow mp3.